--- a/Exp1_QuadraticRoots/实验报告.md
+++ b/Exp1_QuadraticRoots/实验报告.md
@@ -52,8 +52,10 @@ x1 = -999999.999998999992386, x2 = -0.000001000000000
 
 ## 4. 分析与讨论
 1. 分析两种方法在不同参数条件下的误差表现
+   方法一在参数处理时，更容易出现舍入误差，即舍入误差造成的误差较方法二会更大
 
 3. 讨论数值计算中可能出现的问题及改进方法
+   小数值相减时精确性太差，以致除以小数值时结果精确性太低，可以写一个判断条件，当数值较小时，提高计算机对数据的精确度，比如一个1e-16的数，则让计算机的精度提高到1e-20级别
 
 
 ## 附录：核心代码片段
