--- a/Exp1_QuadraticRoots/实验报告.md
+++ b/Exp1_QuadraticRoots/实验报告.md
@@ -61,4 +61,20 @@ x1 = -999999.999998999992386, x2 = -0.000001000000000
 ## 附录：核心代码片段
 ```python
 # 这里粘贴关键代码片段
-```
+#方法一：
+```discriminant = b * b - 4 * a * c
+    if discriminant < 0:
+        return None  # 无实根
+
+    sqrt_discriminant = np.sqrt(discriminant)
+    x1 = (-b + sqrt_discriminant) / (2 * a)
+    x2 = (-b - sqrt_discriminant) / (2 * a)
+#方法二：discriminant = b * b - 4 * a * c
+    if discriminant < 0:
+        return None  # 无实根
+
+    sqrt_discriminant = np.sqrt(discriminant)
+    x1 = (2 * c) / (-b - sqrt_discriminant)
+    x2 = (2 * c) / (-b + sqrt_discriminant)
+
+    return x1, x2
