--- a/Exp4_HarmonicSum/实验报告.md
+++ b/Exp4_HarmonicSum/实验报告.md
@@ -48,6 +48,7 @@ $$ \delta = \frac{|S^{(up)} - S^{(down)}|}{|(S^{(up)} + S^{(down)}) / 2|} $$
 
 ### 4.2 误差分析图
 （在此插入相对差异δ随N变化的双对数图）
+![计算物理实验作业第七周——4](https://github.com/user-attachments/assets/f4d2506b-fdbf-4ab5-b80c-2cc820c2e089)
 
 ## 5. 分析与讨论
 ### 5.1 结果分析
