--- a/Exp4_HarmonicSum/实验报告.md
+++ b/Exp4_HarmonicSum/实验报告.md
@@ -53,11 +53,12 @@ $$ \delta = \frac{|S^{(up)} - S^{(down)}|}{|(S^{(up)} + S^{(down)}) / 2|} $$
 ## 5. 分析与讨论
 ### 5.1 结果分析
 1. 相对差异随N的变化趋势：
-   - （分析图表趋势）
+   - 相对差异随n增加而增加，但增加速率减缓
 
 2. 舍入误差累积效应：
    - （分析为什么 $S^{(down)}$更精确）
    - （结合浮点数表示方式解释）
+   - 如果按照从小到大的顺序，也就是后加1/n，再加1/(n-1)，直到加到1，当n很大时，前面的项会非常小，比如1/1000000这样的小数。当这些小数被加到当前的和里时，如果当前的和已经很大，那么小的数可能会因为浮点数的精度问题而被舍入掉，无法对总和产生应有的贡献。
 
 ### 5.2 误差来源分析
 1. 浮点数表示精度限制
@@ -69,10 +70,12 @@ $$ \delta = \frac{|S^{(up)} - S^{(down)}|}{|(S^{(up)} + S^{(down)}) / 2|} $$
 
 ## 7. 思考题
 1. 为什么从大到小求和通常能获得更好的精度？
+. 如果按照从小到大的顺序，也就是后加1/n，再加1/(n-1)，直到加到1，这时候可能的问题是什么呢？比如当n很大时，前面的项会非常小，比如1/1000000这样的小数。当这些小数被加到当前的和里时，如果当前的和已经很大，那么小的数可能会因为浮点数的精度问题而被舍入掉，无法对总和产生应有的贡献。
 
-2. 在实际应用中，如何选择合适的求和策略来减小舍入误差？
+3. 在实际应用中，如何选择合适的求和策略来减小舍入误差？
+   
 
-3. 除了改变求和顺序，还有什么方法可以提高数值计算的精度？
+5. 除了改变求和顺序，还有什么方法可以提高数值计算的精度？
 
 ## 附录：关键代码
 ```python
