--- a/Exp4_HarmonicSum/实验报告.md
+++ b/Exp4_HarmonicSum/实验报告.md
@@ -73,10 +73,12 @@ $$ \delta = \frac{|S^{(up)} - S^{(down)}|}{|(S^{(up)} + S^{(down)}) / 2|} $$
 . 如果按照从小到大的顺序，也就是后加1/n，再加1/(n-1)，直到加到1，这时候可能的问题是什么呢？比如当n很大时，前面的项会非常小，比如1/1000000这样的小数。当这些小数被加到当前的和里时，如果当前的和已经很大，那么小的数可能会因为浮点数的精度问题而被舍入掉，无法对总和产生应有的贡献。
 
 3. 在实际应用中，如何选择合适的求和策略来减小舍入误差？
-   
+   从大到小求和
+
+
 
 5. 除了改变求和顺序，还有什么方法可以提高数值计算的精度？
-
+Kahan求和算法，Kahan算法通过补偿的方法来减少误差，是个有效的方法。另外，可能还有分治法，把数组分成小块，分别求和再合并，这样可以减少累积误差。
 ## 附录：关键代码
 ```python
 # 在此粘贴关键代码实现
