--- a/Exp6_BesselRecursion/实验报告.md
+++ b/Exp6_BesselRecursion/实验报告.md
@@ -29,21 +29,22 @@ $$ j_l^\mathrm{normalized}(x) = j_l^\mathrm{compute}(x) \times \frac{j_0^\mathrm
 ## 3. 实验方法
 ### 3.1 代码实现
 1. `bessel_up(x, lmax)` 函数实现：
-   - （描述实现方法）
-   - （初始值选取）
-   - （递推过程）
+   - （实现方法）利用球贝塞尔函数的向上递推关系式jl+1(x)=(2l+1/x)jl(x)-jl-1(x)，已知的低阶函数值（如j0(x)和j1(x)）出发，逐阶递推求出更高阶的jl(x)值
+   - （初始值选取）根据j0(x) = sin(x)/x，j1(x)=(sinx/x^2)-cosx/x，当x=0时，j0(0)=1，j1(0)极限为0
+   - （递推过程）从l=1到lmax−1，由jl+1(x)=(2l+1/x)jl(x)-jl-1(x)，一步步由j0(x),j1(x)推导出j2(x),j3(x),…,jlmax(x)
 
 2. `bessel_down(x, lmax, m_start)` 函数实现：
-   - （描述实现方法）
-   - （初始值选取）
-   - （递推过程）
-   - （归一化方法）
+   - （描述实现方法）jl-1(x)=(2l+1/x)jl(x)-jl+1(x)，从已知的低阶函数值（如j0(x)和j1(x)）出发，逐阶递推求出更高阶的jl(x) 值。
+   - （初始值选取）j0(x):代码中用 NumPy 的 np.sinc(x/π) 实现，当x=0 时，定义j0(0)=1
+   -              j1(x):由j1(x)=(sinx/x^2)-cosx/x实现，当x=0，极限值为 0，因此设为 0
+   - （递推过程）应用递推公式：jl+1(x)=(2l+1/x)jl(x)-jl-1(x)
+   - （归一化方法）递推过程中算出的j[0]并不准确，需要一个缩放因子scale=j0(x)真实值/j0(x)递推值，再返回j*scale，实现归一化
 
 ### 3.2 数据收集与处理
 1. 测试点选取：x = 0.1, 1.0, 10.0
 2. 计算范围：l = 0 到 25
 3. 与scipy.special.spherical_jn比较
-4. 误差计算方法
+4. 误差计算方法：通过比较数值解（向上/向下递推）与精确解（SciPy 内建函数 spherical_jn）之间的 相对误差 来衡量的
 
 ## 4. 实验结果
 ### 4.1 数值结果
