--- a/Exp6_BesselRecursion/实验报告.md
+++ b/Exp6_BesselRecursion/实验报告.md
@@ -50,25 +50,26 @@ $$ j_l^\mathrm{normalized}(x) = j_l^\mathrm{compute}(x) \times \frac{j_0^\mathrm
 ### 4.1 数值结果
 | x | l | $j_l^\mathrm{up}(x)$ | $j_l^\mathrm{down}(x)$ | $j_l^\mathrm{scipy}(x)$ |
 |---|---|----------------------|------------------------|-------------------------|
-| 0.1 | 3 |                      |                        |                         |
-| 0.1 | 5 |                      |                        |                         |
-| 0.1 | 8 |                      |                        |                         |
-| 1.0 | 3 |                      |                        |                         |
-| ... | ... |                    |                        |                         |
+| 0.1 | 3 |9.518522592344425e-06| 9.51851972086557e-06  |  9.518519720865581e-06  |
+| 0.1 | 5 |1.911381719565952e-08| 9.616310232916446e-10 |  9.616310232916450e-10  |
+| 0.1 | 8 |0.03877785639318798  | 2.901200102530189e-16 |  2.901200102530194e-16  |
+| 1.0 | 3 |0.009006581117113388 | 0.009006581117112515  |  0.009006581117112524   |
+| ... | ... |       ...         |         ...           |           ...           |
 
 ### 4.2 误差分析图
-（在此插入三个x值对应的半对数图）
+![image](https://github.com/user-attachments/assets/2fecf388-59f9-42d7-aa7d-1202a9625539)
+
 
 ## 5. 分析与讨论
 ### 5.1 数值稳定性分析
 1. 向上递推的不稳定性：
-   - 失效区域分析（l > x时的表现）
-   - 误差放大机制分析
-   - 与球诺伊曼函数的关系
+   - 失效区域分析（l > x时的表现）：对于球贝塞尔函数，当阶数l远大于自变量x时，有渐近行为jl(x)∼x^l/(2l+1)!!,随l 增大迅速衰减，对于递推公式：jl+1(x)=(2l+1/x)jl(x)-jl-1(x)在l≫x 时第一项系数(2l+1)/x≫1，导致极小的数值误差被以同样巨大的因子放大，很快跑偏。
+   - 误差放大机制分析：向上递推每一步都将前两步的舍入误差混入当前值，尤其是当(2l+1)/x增大时，较小的相对误差会指数级放大。
+   - 与球诺伊曼函数的关系：球贝塞尔函数jl和球诺伊曼函数yl构成二阶微分方程的两线性无关解。向上递推时，计算中会无意间混入yl(x) 的分量，而yl在l≫x 时呈指数增长，进一步加剧不稳定。
 
 2. 向下递推的稳定性：
-   - 误差抑制机制
-   - 归一化的作用
+   - 误差抑制机制：向下递推从高阶m≫lmax往下开始，由于高阶解本身jm指数衰减，任何初始舍入误差都会随递推往下反复“乘以”小于1的系数(2l+1)/x（当l<m且选m足够大时(2m+1)/x≫1 但在递推回l时经过多步乘积总体上将误差压制）。
+   - 归一化的作用：由于两个起始值是任意给定的，向下递推得到的序列需要与已知的j0(x)真实值对齐。归一化步骤scale，jl⋅scale → jl
    - 计算精度分析
 
 ### 5.2 计算效率比较
