--- a/Exp3_NumericalIntegration/实验报告.md
+++ b/Exp3_NumericalIntegration/实验报告.md
@@ -39,7 +39,8 @@ $$
 | 10000 |        |                |            |                |
 
 ### 3.2 误差分析图
-（插入误差-步长关系的对数图，并说明观察到的现象）
+（插入误差-步长关系的对数图，并说明观察到的现象）![Figure 2025-04-23 104033](https://github.com/user-attachments/assets/2b954249-5759-4d62-95e4-16ebabbb7ff3)
+
 
 ## 4. 分析与讨论
 ### 4.1 收敛性分析
